refactor(venue): polish logic and createdAt business